--- a/client/src/page/login/style.css
+++ b/client/src/page/login/style.css
@@ -1,13 +1,23 @@
+
 :root{
   --font: 'Poppins', sans-serif;
+  --font-large : 24px;
+  --font-medium : 16px;
+  --white : #f0f0f0;
 }
 
 body{
   background-color: #1E965A;
-  margin: 0px;
-  width: 412px;
+  margin: 0px auto;
   height: 915px;
   font-family: var(--font);
+  display: flex;
+  flex-direction: column;
+}
+main {
+  /* border: 1px solid #000000;   */
+  display: flex;
+  flex-direction: column;
 }
 
 p{
@@ -16,18 +26,19 @@ p{
 }
 
 header{
-  width: 412px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+header > a {
+  display: flex;
+  flex-direction: column;
 }
 
 i{
   font-size: 40px;
-  margin : 45px;
-  top: 50px;
-  left: 70px;
+  margin : 0px;
   align-items: center;
   text-align: center;
-  position: absolute;
   opacity: 60%;
 }
 
@@ -35,20 +46,13 @@ h1{
   font-size: 60px;
   font-weight: lighter;
   font-family: 'Big Shoulders Inline Text', cursive;
-  margin: 45px;
-  top: 85px;
-  left: 50px;
+  margin: 0px;
   align-items: center;
   text-align: center;
-  position: absolute;
   opacity: 60%;
 }
 
-form{
-  position: absolute;
-  top: 180px;
-  margin: 45px;
-  margin-left: 30px;
+form{  
   align-items: center;
   text-align: center;
   font-family: var(--font);
@@ -78,22 +82,26 @@ input{
 
 
 .join{
-  position: absolute;
-  top: 360px;
-  margin: 45px;
-  left: 60px;
+  font-family: var(--font);
+}
+.join p {
+  text-align: center;
   text-decoration-line: underline;
   text-underline-position: under; 
   text-decoration-color: #f0f0f0;
   font-family: var(--font);
+  font-size: var(--font-large);
+  color: var(--white);
 }
 
-footer{
-  position: absolute;  
-  font-family: 'Big Shoulders Inline Text', cursive;
-  top: 500px;
-  margin: 45px;
-  left: 73px;
+
+.footer{
+  font-family: 'Big Shoulders Inline Text', cursive;  
+}
+.footer > p {
+  text-align: center;
+  font-size: var(--font-medium);
+  font-weight: 600;
 }
 
 
@@ -107,7 +115,6 @@ button{
   background-color: #0B6121;
   width: 220px;
   height: 35px;
-  left: 90px;
   opacity: 80%;
   font-family: var(--font);
   letter-spacing: 3px;
