--- a/client/src/page/login/style.css
+++ b/client/src/page/login/style.css
@@ -22,23 +22,26 @@ body{
   font-family: var(--font);
   display: flex;
   flex-direction: column;  
-  justify-content: space-around;
 }
-main {
-  /* border: 1px solid #000000;   */
-  display: flex;
-  flex-direction: column;
-}
-
-
 
 header{
   display: flex;
   flex-direction: column;
+  margin-bottom: 1em;
+  flex: 3;  
+  justify-content: flex-end;
 }
 header > a {
   display: flex;
   flex-direction: column;
+}
+header .logo {
+  font-weight: lighter;
+  font-family: 'Big Shoulders Inline Text', cursive;
+  font-size: 78px;
+  font-weight: 200;
+  text-align: center;
+  margin: 0px;
 }
 
 i{
@@ -48,17 +51,9 @@ i{
   text-align: center;
   opacity: 60%;
 }
-
-h1{
-  font-size: 60px;
-  font-weight: lighter;
-  font-family: 'Big Shoulders Inline Text', cursive;
-  margin: 0px;
-  align-items: center;
-  text-align: center;
-  opacity: 60%;
+main {
+  flex: 3;
 }
-
 .form-group{  
   display: flex;
   flex-direction: column;
@@ -107,23 +102,29 @@ input::placeholder{
 
 
 .join{
-  font-family: var(--font);
+  margin-top: 1.5em;
 }
 .join p {
+  font-family: var(--font);
   text-align: center;
   text-decoration-line: underline;
   text-underline-position: under; 
   text-decoration-color: #f0f0f0;
   font-family: var(--font);
-  font-size: var(--font-large);
+  font-size: 16px;  
   color: var(--white);
 }
 
 
-.footer{
-  font-family: 'Big Shoulders Inline Text', cursive;  
+.footer{    
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;  
+  margin-bottom: 2em;
 }
 .footer > p {
+  font-family: 'Big Shoulders Inline Text', cursive;    
   text-align: center;
   font-size: var(--font-medium);
   font-weight: 600;
@@ -132,17 +133,19 @@ input::placeholder{
 
 button{
   font-size: 18px;
-  font-weight: lighter;
+  font-weight: 100;
   color: #fff;
   border-radius: 4px;
   border-style: groove;
   border: #0B6121;
-  background-color: #0B6121;
-  width: 220px;
-  height: 35px;
+  background-color: #187848;
+  width: 80%;
+  /* height: 35px; */
   opacity: 80%;
   font-family: var(--font);
-  letter-spacing: 3px;
+  letter-spacing: 3px; /* 자간 CSS */
+  padding: 0.5em 0em;
+  margin-top: 1em;
 }
 
 a:visited{
