--- a/client/src/page/calendar/style.css
+++ b/client/src/page/calendar/style.css
@@ -9,7 +9,7 @@ h1 {
 }
 /*  */
 
-body {background-color: #ffffff;}
+/* body {background-color: #ffffff;} */
 
 .calendar {}
 .calendar header { display: flex; flex-direction: row;}
